Cleanup readme and prepare

--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a7dea195",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6a80e19b",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "28f1521a",
    "metadata": {},
@@ -37,6 +40,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "497ac0bb",
    "metadata": {},
@@ -58,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffcfbb5b",
    "metadata": {},
@@ -66,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f517570f",
    "metadata": {},
@@ -85,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "0c9a1777",
    "metadata": {},
@@ -103,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "af04bd60",
    "metadata": {},
@@ -117,12 +125,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness.prepare()\n",
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "637a7391",
    "metadata": {},
@@ -143,6 +151,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "89cd320e",
    "metadata": {},
@@ -151,6 +160,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c36767bd",
    "metadata": {},
@@ -194,6 +204,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3008b09e",
    "metadata": {},
