--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4d8e180d",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7d598292",
    "metadata": {},
@@ -17,6 +19,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "d899afc2",
    "metadata": {},
@@ -33,15 +36,12 @@
    "source": [
     "import os\n",
     "os.environ['DEBUG']=\"1\"\n",
-<<<<<<< HEAD
     "os.environ['HEGELAI_API_KEY'] = \"\"\n",
-=======
-    "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
->>>>>>> cbd3501573e63dcaa531d14168c01f61376ea55a
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "842f1e47",
    "metadata": {},
@@ -62,6 +62,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "622dea9a",
    "metadata": {},
@@ -70,6 +71,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3babfe5a",
    "metadata": {},
@@ -89,6 +91,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "273e9908",
    "metadata": {},
@@ -107,6 +110,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f3fa5450",
    "metadata": {},
@@ -194,12 +198,12 @@
     }
    ],
    "source": [
-    "harness.prepare()\n",
     "harness.run()\n",
     "harness.visualize()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be9c5ef5",
    "metadata": {},
@@ -281,6 +285,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b1abc866",
    "metadata": {},
@@ -289,6 +294,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "45a9900e",
    "metadata": {},
