--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -32,9 +32,8 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG']=\"1\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
-    "os.environ['OPENAI_API_KEY'] = \"\""
+    "os.environ['OPENAI_API_KEY'] = \"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\""
    ]
   },
   {
@@ -147,26 +146,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
+       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
+       "      <td>3.667436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
+       "      <td>1.065293</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
+       "      <td>3.060034</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000001</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
+       "      <td>1.239039</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -179,11 +178,17 @@
        "2  Respond the following query: Who was the first president?              \n",
        "3  Respond the following query: Who was the first president of India?     \n",
        "\n",
-       "                                                  response(s)   latency  \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002  \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001  "
+       "                                                             response(s)   \n",
+       "0  [\\n\\nThe first President of the United States was George Washington.]  \\\n",
+       "1  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]             \n",
+       "2  [\\n\\nThe first president of the United States was George Washington.]   \n",
+       "3  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]             \n",
+       "\n",
+       "    latency  \n",
+       "0  3.667436  \n",
+       "1  1.065293  \n",
+       "2  3.060034  \n",
+       "3  1.239039  "
       ]
      },
      "metadata": {},
@@ -191,7 +196,6 @@
     }
    ],
    "source": [
-    "harness.prepare()\n",
     "harness.run()\n",
     "harness.visualize()"
    ]
@@ -245,28 +249,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>{'input': 'Who was the first president of India?'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>{'input': 'Who was the first president?'}</th>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
+       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
+       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "prompt_template                                                       Answer the following question: {{input}}   \n",
-       "user_input                                                                                                       \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \\\n",
-       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]   \n",
+       "prompt_template                                                                  Answer the following question: {{input}}   \n",
+       "user_input                                                                                                                  \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]            \\\n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe first President of the United States was George Washington.]   \n",
        "\n",
-       "prompt_template                                                         Respond the following query: {{input}}  \n",
-       "user_input                                                                                                      \n",
-       "{'input': 'Who was the first president of India?'}  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  \n",
-       "{'input': 'Who was the first president?'}           [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  "
+       "prompt_template                                                                    Respond the following query: {{input}}  \n",
+       "user_input                                                                                                                 \n",
+       "{'input': 'Who was the first president of India?'}  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]            \n",
+       "{'input': 'Who was the first president?'}           [\\n\\nThe first president of the United States was George Washington.]  "
       ]
      },
      "metadata": {},
@@ -343,12 +347,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-07-05 09:19:54,457] INFO in posthog: Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
-      "[2023-07-05 09:19:54,471] INFO in ctypes: Successfully imported ClickHouse Connect C data optimizations\n",
-      "[2023-07-05 09:19:54,472] INFO in ctypes: Successfully import ClickHouse Connect C/Numpy optimizations\n",
-      "[2023-07-05 09:19:54,478] INFO in json_impl: Using python library for writing JSON byte strings\n",
-      "[2023-07-05 09:19:54,558] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 09:19:54,844] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
+      "[2023-07-05 13:18:09,021] INFO in posthog: Anonymized telemetry enabled. See https://docs.trychroma.com/telemetry for more information.\n",
+      "[2023-07-05 13:18:09,040] INFO in ctypes: Successfully imported ClickHouse Connect C data optimizations\n",
+      "[2023-07-05 13:18:09,041] INFO in ctypes: Successfully import ClickHouse Connect C/Numpy optimizations\n",
+      "[2023-07-05 13:18:09,051] INFO in json_impl: Using python library for writing JSON byte strings\n",
+      "[2023-07-05 13:18:09,132] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 13:18:09,454] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
      ]
     },
     {
@@ -384,10 +388,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[2023-07-05 09:19:55,087] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 09:19:55,320] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 09:19:55,552] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
-      "[2023-07-05 09:19:55,787] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
+      "[2023-07-05 13:18:09,719] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 13:18:09,953] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 13:18:10,198] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n",
+      "[2023-07-05 13:18:10,455] WARNING in Collection: No embedding_function provided, using default embedding function: DefaultEmbeddingFunction https://huggingface.co/sentence-transformers/all-MiniLM-L6-v2\n"
      ]
     },
     {
@@ -421,30 +425,30 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Answer the following question: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000004</td>\n",
-       "      <td>0.965657</td>\n",
+       "      <td>[\\n\\nThe first President of the United States was George Washington.]</td>\n",
+       "      <td>3.667436</td>\n",
+       "      <td>0.275267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Answer the following question: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>1.021784</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad,]</td>\n",
+       "      <td>1.065293</td>\n",
+       "      <td>0.352304</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Respond the following query: Who was the first president?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000002</td>\n",
-       "      <td>0.965657</td>\n",
+       "      <td>[\\n\\nThe first president of the United States was George Washington.]</td>\n",
+       "      <td>3.060034</td>\n",
+       "      <td>0.275267</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Respond the following query: Who was the first president of India?</td>\n",
-       "      <td>[\\n\\nThe Los Angeles Dodgers won the World Series in 2020]</td>\n",
-       "      <td>0.000001</td>\n",
-       "      <td>1.021784</td>\n",
+       "      <td>[\\n\\nThe first President of India was Dr. Rajendra Prasad.]</td>\n",
+       "      <td>1.239039</td>\n",
+       "      <td>0.348146</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -457,17 +461,17 @@
        "2  Respond the following query: Who was the first president?              \n",
        "3  Respond the following query: Who was the first president of India?     \n",
        "\n",
-       "                                                  response(s)   latency   \n",
-       "0  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000004  \\\n",
-       "1  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "2  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000002   \n",
-       "3  [\\n\\nThe Los Angeles Dodgers won the World Series in 2020]  0.000001   \n",
+       "                                                             response(s)   \n",
+       "0  [\\n\\nThe first President of the United States was George Washington.]  \\\n",
+       "1  [\\n\\nThe first President of India was Dr. Rajendra Prasad,]             \n",
+       "2  [\\n\\nThe first president of the United States was George Washington.]   \n",
+       "3  [\\n\\nThe first President of India was Dr. Rajendra Prasad.]             \n",
        "\n",
-       "   similar_to_expected  \n",
-       "0  0.965657             \n",
-       "1  1.021784             \n",
-       "2  0.965657             \n",
-       "3  1.021784             "
+       "    latency  similar_to_expected  \n",
+       "0  3.667436  0.275267             \n",
+       "1  1.065293  0.352304             \n",
+       "2  3.060034  0.275267             \n",
+       "3  1.239039  0.348146             "
       ]
      },
      "metadata": {},
