--- a/examples/notebooks/SemanticSimilarity.ipynb
+++ b/examples/notebooks/SemanticSimilarity.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "os.environ['DEBUG']=\"1\"\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
