Revert notebooks to working version

--- a/examples/notebooks/HumanFeedback.ipynb
+++ b/examples/notebooks/HumanFeedback.ipynb
@@ -32,7 +32,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\", if you want to use debug mode.\n",
+    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
@@ -117,7 +117,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness.prepare()\n",
     "harness.run()\n",
     "harness.visualize()"
    ]
