--- a/examples/notebooks/AutoEval.ipynb
+++ b/examples/notebooks/AutoEval.ipynb
@@ -26,18 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "1eb85245",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-05T21:07:35.657190Z",
-     "start_time": "2023-07-05T21:07:35.634475Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "os.environ['DEBUG'] = \"\"  # Set to \"1\", if you want to use debug mode.\n",
+    "os.environ['DEBUG'] = \"\"  # Set to \"1\" if you want to use debug mode.\n",
     "os.environ['HEGELAI_API_KEY'] = \"\"  # Optional, it will be needed to use with `HegelScribe` to persist/visualize your experiments\n",
     "os.environ['OPENAI_API_KEY'] = \"\""
    ]
@@ -52,14 +47,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "id": "ad3859e7",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-05T21:07:35.658762Z",
-     "start_time": "2023-07-05T21:07:35.637837Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Dict\n",
@@ -86,14 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "id": "29408faa",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-05T21:07:35.659371Z",
-     "start_time": "2023-07-05T21:07:35.640388Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "prompt_templates = [\"Answer the following question: {{input}}\", \"Respond the following query: {{input}}\"]\n",
@@ -110,14 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "id": "69159622",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-07-05T21:07:35.674771Z",
-     "start_time": "2023-07-05T21:07:35.643337Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "harness = PromptTemplateExperimentationHarness(\"text-davinci-003\", prompt_templates, user_inputs)"
@@ -133,12 +113,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "744ab156",
    "metadata": {},
    "outputs": [],
    "source": [
-    "harness.prepare()\n",
     "harness.run()\n",
     "harness.visualize()"
    ]
@@ -153,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "bb779595",
    "metadata": {
     "scrolled": true
@@ -181,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "8fe03c31",
    "metadata": {},
    "outputs": [],
@@ -224,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "4633f802",
    "metadata": {},
    "outputs": [],
@@ -235,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "803d65f4",
    "metadata": {},
    "outputs": [],
